ecmascript/parser/tests/test262-error-references/fail/11db90549ed49ac3.js.stderr
error: Unexpected token Some(Semi)
 --> $DIR/tests/test262-parser/fail/11db90549ed49ac3.js:1:7
  |
1 | let x,;
  |       ^

